--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Fengur
 author: Fengur
 author_link: http://fengur.cn
-author_description: 盲人骑瞎马，只求走的远一点。 & your face
+author_description: Easy life easy mind 
 email: duraedream@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
